# Rexer

./: .gitignore  Rexer.spec  build.py  prepare_release.py  pyproject.toml  readme.md
.github/workflows/: build.yml
backend/: api.py  clipEditor.py  ffmpegManager.py  fileProcessor.py  logger.py  main.py  monitor.py  paths.py  settings.py  state.py  thumbnailsManager.py  tray.py  utils.py  webviewManager.py  windowHandler.py
frontend/: components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/AlertDialog/: index.tsx
frontend/src/components/PathInput/: index.tsx
frontend/src/components/Tooltip/: index.tsx
frontend/src/components/dropdown/: index.tsx
frontend/src/components/icons/: ScrissorsCutIcon.tsx
frontend/src/components/sidebar/: index.tsx
frontend/src/components/themeProvider/: theme-toggle.tsx
frontend/src/components/ui/: dropdown-menu.tsx  sidebar.tsx
frontend/src/components/videoGrid/: player.tsx  videoCard.tsx
frontend/src/hooks/: useClipActions.ts  useClips.ts  useSettings.ts  useSocket.ts  useThumb.ts
frontend/src/pages/: ClipsPage.tsx  SettingsPage.tsx
